--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ nav a:hover {
 }
 
 a {
-    color: #ea3546;
+    color: #358cea;
     text-decoration: none;
 }
 
@@ -76,7 +76,7 @@ section h1 {
 
 .button {
     display: inline-block;
-    background: #ea3546;
+    background: #3574ea;
     color: white;
     border-radius: 4px;
     font-weight: 700;
